# parselmouth

./: .gitignore  README.md  parselmouth.yaml.example  pyproject.toml
parselmouth/: cli.py  gemini.py
scripts/: generate_test_data.py
